--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="shortcut icon" href="./assets/images/sidoarjokab_logo.png" type="image/x-icon" />
 		<title>Situs Informasi Covid-19 Daerah Kabupaten Sidoarjo</title>
 		<link rel="stylesheet" href="./assets/css/style.css" />
+		<link rel="stylesheet" href="./assets/css/responsive.css" />
 	</head>
 
 	<body>
