--- a/index.html
+++ b/index.html
@@ -456,24 +456,12 @@
 						</figcaption>
 					</figure>
 				</div>
-
-				<!-- box-setting -->
-				<!-- <div class="box-setting">
-					<figure class="fig-profile">
-						
-						<figcaption class="figcap-profile">
-							<h2>Update! box-setting</h2>
-							<h3>Kabupaten Sidoarjo</h3>
-							<h3>Jawa Timur</h3>
-						</figcaption>
-					</figure>
-				</div> -->
 			</aside>
 		</div>
 
 		<!-- Foobar -->
 		<footer>
-			<p>Copyright © 2020 All Rights Reserved | <span>Labsan</span></p>
+			<p>Copyright © 2020 All Rights Reserved | <span><a href="https://github.com/labsan/dicoding-sda-covid19.github.io">Labsan</a></span></p>
 		</footer>
 
 		<script src="./assets/js/script.js"></script>
